# PasswordManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: all_frames.h  animate.h  button.h  cache.h  characters.h  entry.h  forward.h  frame.h  frame_home.h  frame_password.h  frame_view.h  resources.h  widget.h  window.h
src/: animate.cpp  button.cpp  cache.cpp  characters.cpp  entry.cpp  frame.cpp  home.cpp  main.cpp  password.cpp  resources.cpp  view.cpp  widget.cpp  window.cpp
template/: cache.tpp
